--- a/style.css
+++ b/style.css
@@ -820,6 +820,11 @@ h4 {
     background-image: url("img/image-de-presentation.bmp");
 }
 
+ul li
+{
+    padding: 5px;
+}
+
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
