--- a/style.css
+++ b/style.css
@@ -734,6 +734,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.black {
+    color: #000000;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -775,12 +779,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .ltc-white {
